# IMPACT-pipeline

./: .gitignore  .gitmodules  CHANGELOG.md  CITATIONS.md  LICENSE  Makefile  README.md  main.nf  modules.json  nextflow.config  nextflow_schema.json  pyproject.toml
assets/: email_template.html  email_template.txt  multiqc_config.yml  schema_input.json  sendmail_template.txt
conf/: base.config  modules.config  test.config  test_full.config
docs/: README.md  output.md  usage.md
lib/: WorkflowDemultiplex.groovy  WorkflowMain.groovy  WorkflowPipeline.groovy
modules/pipeline-tools/modules/pre_bcl2fastq/: main.nf
output/pipeline_info/: execution_report_2022-10-24_02-02-03.html  execution_timeline_2022-10-24_02-02-03.html  execution_trace_2022-10-24_02-02-03.txt  pipeline_dag_2022-10-24_02-02-03.html
subworkflows/demultiplex/: demultiplex.nf
subworkflows/demultiplex/tests/: nextflow.config  test_demultiplex.nf
tests/: nextflow.config  test_workflowdemultiplex.nf
workflows/: pipeline.nf
workflows/demultiplex/: run_demultiplex.nf
